--- a/yourThing/yourThing/Base.lproj/Main.storyboard
+++ b/yourThing/yourThing/Base.lproj/Main.storyboard
@@ -52,9 +52,9 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Kwj-vF-Ys7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2052" y="-318"/>
+            <point key="canvasLocation" x="2991.1999999999998" y="-318.89055472263868"/>
         </scene>
-        <!--Item-->
+        <!--Second View Controller-->
         <scene sceneID="Bav-N4-FZt">
             <objects>
                 <viewController id="WQw-py-JLH" customClass="SecondViewController" customModule="yourThing" customModuleProvider="target" sceneMemberID="viewController">
@@ -84,11 +84,11 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="P41-VG-ezo"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="G7u-Fn-hHq"/>
+                    <navigationItem key="navigationItem" id="Fo6-mG-h0v"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="etP-zj-AFN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1024.8" y="133.5832083958021"/>
+            <point key="canvasLocation" x="1964" y="133.5832083958021"/>
         </scene>
         <!--Portal View Controller-->
         <scene sceneID="7FE-qa-uuU">
@@ -103,7 +103,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qfw-Ep-DvB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2052" y="509"/>
+            <point key="canvasLocation" x="2991.1999999999998" y="508.69565217391306"/>
         </scene>
         <!--Item-->
         <scene sceneID="rGH-w3-qAg">
@@ -144,7 +144,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bp7-fL-j22" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3297" y="134"/>
+            <point key="canvasLocation" x="4236" y="133.5832083958021"/>
         </scene>
         <!--Item-->
         <scene sceneID="Ycg-v9-QaO">
@@ -187,13 +187,32 @@
                     </tabBar>
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="jAq-VC-YS1"/>
-                        <segue destination="WQw-py-JLH" kind="relationship" relationship="viewControllers" id="ZHX-CA-ONz"/>
+                        <segue destination="ugB-s6-G08" kind="relationship" relationship="viewControllers" id="ZHX-CA-ONz"/>
                         <segue destination="BAe-vy-Nuh" kind="relationship" relationship="viewControllers" id="zpj-Vy-e0L"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bLE-A7-ZpC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="133.59999999999999" y="133.5832083958021"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="dWY-ag-TNU">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ugB-s6-G08" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="G7u-Fn-hHq"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="KBd-hd-UpF">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="WQw-py-JLH" kind="relationship" relationship="rootViewController" id="ryP-Gv-yJJ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nML-KF-XrT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1024.8" y="133.5832083958021"/>
         </scene>
     </scenes>
 </document>
